# accelerated-game-of-life

./: CMakeLists.txt  Makefile  board.cpp  board.hpp  board_test.cpp  build.sh  cell_world.cpp  game_of_life.cpp  game_of_life.hpp  game_of_life_cpu_sequential.cpp  game_of_life_cpu_simd.cpp  game_of_life_cpu_simd.hpp  game_of_life_sim.hpp  generate.cpp  gol.hpp  gol_cpu.cpp  sim.hpp  sim_cpu_omp.cpp  sim_cpu_sequential.cpp  sim_cpu_simd.cpp  sim_cpu_simd.hpp  sim_gpu_ocl.cpp  sim_gpu_ocl_kernel.cl  simulate.cpp  simulators.hpp  unit_test.cpp  unit_test.hpp  util.h  util.hpp
include/: cell_world.hpp  cpu_simd.hpp  game_of_life.hpp  gpu_ocl.hpp  life.hpp  life_cpu_simd.hpp  sim.hpp  util.hpp
src/: cell_world.cpp  cpu_omp.cpp  cpu_simd.cpp  game_of_life.cpp  generate.cpp  gpu_cuda.cu  gpu_ocl.cpp  gpu_ocl_kernels.cl  life_cpu_omp.cpp  life_cpu_seq.cpp  life_cpu_simd.cpp  life_gpu_ocl.cpp  sim_cpu_omp.cpp  sim_cpu_seq.cpp  sim_cpu_simd.cpp  sim_gpu_ocl.cpp  simulate.cpp
src/implementations/: life_cpu_omp.cpp  life_cpu_seq.cpp  life_cpu_simd.cpp  life_gpu_ocl.cpp
src/kernels/: life_ocl_kernel.cl  life_ocl_kernel_16.cl  life_ocl_kernel_2.cl  life_ocl_kernel_4.cl  life_ocl_kernel_8.cl  life_ocl_kernel_e.cl  sim_gpu_ocl_kernel_16.cl  sim_gpu_ocl_kernel_8.cl
src/simulators/: cpu_omp.cpp  cpu_seq.cpp  cpu_simd.cpp
